<?xml version="1.0" encoding="utf-8"?>

<!--// drag and drop functionality and arrange anyhow we want-->
<!--and not like linear or relative tha tu have to specify-->
<!--But constraining the view is imp as or else UI on app will not be proper-->

<!--Absolute Positioning : fixed numberical value-->
<!--Relative Positioning : relative to some ele give constraints-->
<!--Adaptable Positioning : weight ratios-->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout_practise"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    //Guideline

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="100dp" />

    // view are any UI ele that we see

    //chaining
    <Button
        android:id="@+id/button1"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        android:layout_marginBottom="100dp"
        />



    <Button
        android:id="@+id/button2"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        android:layout_marginBottom="100dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        android:layout_marginBottom="100dp"/>


    // Bias : adjusts the ratio of the button

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginEnd="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/click"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button3,button2,button1" />


    //circular constraint

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/edit_fab"-->
<!--        style="@style/Widget.Design.FloatingActionButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        app:fabSize="normal"-->
<!--        android:src="@drawable/ic_baseline_add_24"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/guideline"/>-->

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/aspect_ratio_fab"-->
<!--        style="@style/Widget.Design.FloatingActionButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="72dp"-->
<!--        app:fabSize="normal"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/edit_fab"-->
<!--        app:layout_constraintCircle="@+id/edit_fab"-->
<!--        app:layout_constraintCircleAngle="0"-->
<!--        app:layout_constraintCircleRadius="90dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline" />-->

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/crop_fab"-->
<!--        style="@style/Widget.Design.FloatingActionButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:fabSize="normal"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/edit_fab"-->
<!--        app:layout_constraintCircle="@+id/edit_fab"-->
<!--        app:layout_constraintCircleAngle="315"-->
<!--        app:layout_constraintCircleRadius="90dp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/aspect_ratio_fab"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline" />-->

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/rotate_90_fab"-->
<!--        style="@style/Widget.Design.FloatingActionButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:fabSize="normal"-->
<!--        app:layout_constraintCircle="@+id/edit_fab"-->
<!--        app:layout_constraintCircleAngle="270"-->
<!--        app:layout_constraintCircleRadius="90dp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/edit_fab"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline" />-->









</androidx.constraintlayout.widget.ConstraintLayout>